Fix compiler warnings: deprecated APIs, unchecked casts, and heap pollution
Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance(),
add @SafeVarargs for parameterized varargs, @SuppressWarnings for safe unchecked
casts and deprecated VFS2 traverseDescendents override, and fix type erasure
override in ComplexInvocationHandler.